config/k8s/overlays/dev-cluster/dice-magic-app.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: dice-magic-app
spec:
  template:
    spec:
      containers:
      - name: dice-server
        image: gcr.io/dice-magic-test/dice-server-dev:latest
        imagePullPolicy: Always
      - name: chat-clients
        image: gcr.io/dice-magic-test/chat-clients-dev:latest
        imagePullPolicy: Always
