config/k8s/overlays/dev-cluster/nginx-ingress-controller.yaml
kind: Service
apiVersion: v1
metadata:
  name: ingress-nginx
spec:
  loadBalancerIP: "35.202.172.148"
