config/k8s/overlays/dev-cluster/nginx-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: basic-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  tls:
    - hosts:
      - www.dev.dicemagic.io
      - api.dicemagic.io
  rules:
  - host: www.dev.dicemagic.io
  - host: api.dev.dicemagic.io
